--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,5 +1,4 @@
-# docker-compose.production.yml
-version: '3'
+version: '2'
 
 volumes:
   pg_data_production:
@@ -24,9 +23,9 @@ services:
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: shkrapich/taski_gateway  # Качаем с Docker Hub
+    image: xadr69/taski_gateway  # Качаем с Docker Hub
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
     ports:
-      - 8000:80 
+      - 8000:80
