--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,3 +1,4 @@
+# docker-compose.production.yml
 version: '2'
 
 volumes:
@@ -12,12 +13,12 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: shkrapich/taski_backend
+    image: xadr69/taski_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: shkrapich/taski_frontend  # Качаем с Docker Hub
+    image: xadr69/taski_frontend  # Качаем с Docker Hub
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
