--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,8 @@
 [flake8]
-# Не проверять код на соответствие стандартам W503 и F811
+# Не проверять код на соответствие стандартам W503 и F8
 ignore = 
     W503,
-    F811,
-    D101,
-    D100,
-    E501,
-    D106,
-    D102,
-    D104,
-    I003
+    F811
 # Не проверять код в перечисленных директориях:
 exclude = 
     tests/,
@@ -20,4 +13,5 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501 
+    */settings.py:W191, E101, E501
+    */tests.py:I004, I001
