--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,8 +158,8 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
     # Копируем docker-compose.production.yml на продакшен-сервер
-    - name: Copy docker-compose.yml via ssh
-      uses: appleboy/scp-action@master
+    - name: Executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
     # Передаём параметры для action appleboy/scp-action:
       with:
         host: ${{ secrets.HOST }}
